--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.6.5",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.487.0",
     "npm": "^11.3.0",
     "react": "^19.0.0",
