--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@studio-freight/lenis": "^1.0.42",
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
     "lucide-react": "^0.487.0",
+    "nodemailer": "^6.10.1",
     "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
